# Medical-RAG-retriever

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup_check.py
app/backend/: main.py
app/frontend/: streamlit_app.py
config/: config.yaml
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
notebooks/: README.md  medrag-finetune-bge-v3.ipynb  medrag-finetune-biobert-retriever.ipynb
scripts/: 01_collect_data.py  02_preprocess.py  03_build_index.py  04_train_retriever.py  05_evaluate.py
src/medrag/: __init__.py  config.py
src/medrag/data/: chunking.py  preprocess.py  pubmed_collector.py
src/medrag/evaluation/: qa_metrics.py  ragas_eval.py  retrieval_metrics.py
src/medrag/llm/: generator.py  prompts.py
src/medrag/rag/: pipeline.py
src/medrag/reranking/: cross_encoder.py
src/medrag/retrieval/: bm25_retriever.py  embeddings.py  faiss_index.py  hybrid_retriever.py  retriever.py
src/medrag/training/: __init__.py  pair_builder.py  train_retriever.py
src/medrag/utils/: io.py
tests/: test_smoke.py
